--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
-        ghc: ['8.2', '8.4', '8.6', '8.8', '8.10', '9.0', '9.2', '9.4']
+        ghc: ['8.6', '8.8', '8.10', '9.0', '9.2', '9.4']
         cabal: ['3.8']
         nginx: [1.20.2]
         nginx-haskell-module: [3.4.1]
