do not put remainder of servers with low priorities in the last upstream
this didn't work before either, now the remainder is deliberately ignored as
it's not clear how to translate priorities and weights from SRV records into
weights of servers in the last upstream

--- a/test/Resolve/nginx.conf
+++ b/test/Resolve/nginx.conf
@@ -98,7 +98,7 @@ http {
         }
 
 #        location /upstrand {
-#            proxy_pass http://$upstrand_utest;
+#            proxy_pass http://$upstrand_utest/;
 #        }
     }
 
