--- a/test/Resolve/nginx.conf
+++ b/test/Resolve/nginx.conf
@@ -87,7 +87,7 @@ http {
 #         'Conf { upstreams =
 #                     [UData { uQuery =
 #                                  QuerySRV
-#                                      (Name "_http._tcp.pkg.freebsd.org")
+#                                      (Name "_http._tcp.resolve.test")
 #                                          (PriorityList
 #                                              ["utest_srv", "utest1_srv"]
 #                                          )
