--- a/test/Resolve/dnsmasq.conf
+++ b/test/Resolve/dnsmasq.conf
@@ -1,4 +1,5 @@
 address=/resolve.test/127.0.0.2
 address=/resolve1.test/127.0.0.3
 srv-host=_http._tcp.resolve.test,www.resolve.test,8020,0,1
+server=8.8.8.8
 
