rewrite hashUQuery by simply using unsafeCoerce

--- a/test/Resolve/nginx.conf
+++ b/test/Resolve/nginx.conf
@@ -62,15 +62,7 @@ http {
                            , uMaxFails = 1
                            , uFailTimeout = 10
                            }
-                    ]
-              , maxWait = Sec 300
-              , waitOnException = Sec 2
-              , responseTimeout = Unset
-              }';
-
-    haskell_run_service simpleService_collectUpstreams $hs_upstreams_srv
-        'Conf { upstreams =
-                    [UData { uQuery =
+                    ,UData { uQuery =
                                  QuerySRV
                                      (Name "_http._tcp.resolve.test")
                                          (SinglePriority "utest_srv")
@@ -83,9 +75,19 @@ http {
               , responseTimeout = Unset
               }';
 
-#     haskell_run_service simpleService_collectUpstreams $hs_upstreams_srv
+#     haskell_run_service simpleService_collectUpstreams $hs_upstreams
 #         'Conf { upstreams =
 #                     [UData { uQuery =
+#                                  QueryA
+#                                      (WeightedList
+#                                          [(Name "www.resolve.test:8020", 2)
+#                                          ,(Name "www.resolve1.test:8030", 1)
+#                                          ]
+#                                      ) (PriorityList ["utest", "utest1"])
+#                            , uMaxFails = 1
+#                            , uFailTimeout = 10
+#                            }
+#                     ,UData { uQuery =
 #                                  QuerySRV
 #                                      (Name "_http._tcp.resolve.test")
 #                                          (PriorityList
@@ -100,15 +102,11 @@ http {
 #               , responseTimeout = Unset
 #               }';
 
-    haskell_service_var_ignore_empty $hs_upstreams $hs_upstreams_srv;
-    haskell_service_var_in_shm upstreams 64k /tmp
-        $hs_upstreams $hs_upstreams_srv;
+    haskell_service_var_ignore_empty $hs_upstreams;
+    haskell_service_var_in_shm upstreams 64k /tmp $hs_upstreams;
 
     haskell_service_var_update_callback simpleService_signalUpconf
         $hs_upstreams '["http://127.0.0.1:8010/upconf"]';
-
-    haskell_service_var_update_callback simpleService_signalUpconf
-        $hs_upstreams_srv '["http://127.0.0.1:8010/upconf_srv"]';
 
     server {
         listen          127.0.0.1:8010;
@@ -121,24 +119,9 @@ http {
             deny  all;
         }
 
-        location /upconf_srv {
-            upconf $hs_upstreams_srv;
-
-            allow 127.0.0.1;
-            deny  all;
-        }
-
         location /upstreams {
             default_type application/json;
             echo $hs_upstreams;
-
-            allow 127.0.0.1;
-            deny  all;
-        }
-
-        location /upstreams_srv {
-            default_type application/json;
-            echo $hs_upstreams_srv;
 
             allow 127.0.0.1;
             deny  all;
