CI: apt-get install libpcre3-dev

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,9 +48,10 @@ jobs:
         with:
           install: "Test::Nginx"
           tests: false
-      - name: Install dnsmasq
+      - name: Install libpcre and dnsmasq
         run: |
           sudo apt-get update 
+          sudo apt-get install -y libpcre3-dev
           sudo apt-get install -y dnsmasq
       - name: Install and test
         env:
