--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
-        ghc: ['8.6', '8.8', '8.10', '9.0', '9.2', '9.4', '9.6']
+        ghc: ['8.8', '8.10', '9.0', '9.2', '9.4', '9.6']
         cabal: ['3.10']
         nginx: [1.22.1]
         nginx-haskell-module: [3.4.3]
