--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
             cabal: '3.16'
             nginx: 1.28.1
             nginx-haskell-module: head
+            experimental: true
           - ghc: '9.12'
             cabal: '3.16'
             nginx: 1.28.1
